# axum-error-handler

./: Cargo.toml  readme.md
axum-err-handler-ctx/: Cargo.toml
axum-err-handler-ctx/src/: lib.rs
axum-err-handler-macro/: Cargo.toml
axum-err-handler-macro/src/: context.rs  custom_fn.rs
err-ctx/: Cargo.toml
err-macro/: Cargo.toml
err_ctx/: Cargo.toml
err_ctx/src/: lib.rs
err_macro/: Cargo.toml
err_macro/src/: lib.rs
err_macro/src/context/: general.rs  nested.rs
src/: lib.rs  response.rs
src/response/: general.rs  nested.rs
tests/: proc.rs
