[workspace]
members = ["err_ctx", "err_macro"]

[workspace.dependencies]
err_ctx = { path = "err_ctx" }
err_macro = { path = "err_macro" }

[package]
name = "axum-error-handler"
version = "0.2.1"
edition = "2024"
authors = ["David Yen <david99900@gmail.com>"]
description = "A simple error handler for axum"
license = "MIT"
repository = "https://github.com/MRDavidYen/axum-error-handler"
categories = ["web-programming"]
keywords = ["axum", "error", "handler", "web", "framework"]

[dependencies]
err_ctx.workspace = true
err_macro.workspace = true

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }
thiserror = "2.0.12"
axum = "0.8"
serde_json = "1.0"
