[workspace]
members = ["axum-err-handler-ctx", "axum-err-handler-macro"]

[package]
name = "axum-error-handler"
version = "0.2.1"
edition = "2024"
authors = ["David Yen <david99900@gmail.com>"]
description = "A simple error handler for axum"
license = "MIT"
repository = "https://github.com/MRDavidYen/axum-error-handler"
categories = ["web-programming"]
keywords = ["axum", "error", "handler", "web", "framework"]

[dependencies]
axum-err-handler-ctx = { version = "0.1.0", path = "axum-err-handler-ctx" }
axum-err-handler-macro = { version = "0.2.1", path = "axum-err-handler-macro" }

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }
thiserror = "2.0.12"
axum = "0.8"
serde_json = "1.0"
