[package]
name = "axum-err-handler-ctx"
version = "0.1.0"
edition = "2024"
authors = ["David Yen <david99900@gmail.com>"]
description = "A context of error that actual implement IntoResponse trait"
license = "MIT"
repository = "https://github.com/MRDavidYen/axum-error-handler"
categories = ["web-programming"]
keywords = ["axum", "error", "handler", "web", "framework"]

[dependencies]
axum = "0.8"
serde_json = "1.0"