[package]
name = "axum-err-handler-macro"
version = "0.2.1"
edition = "2024"
authors = ["David Yen <david99900@gmail.com>"]
description = "A macro implementation for AxumErrorHandler"
license = "MIT"
repository = "https://github.com/MRDavidYen/axum-error-handler"
categories = ["web-programming"]
keywords = ["axum", "error", "handler", "web", "framework"]

[dependencies]
syn = { version = "2.0.101", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.87"

[lib]
proc-macro = true
